[FIX] 마이페이지 - 팔로잉 작가 페이징 오류 , z-index 수정

--- a/src/main/webapp/css/mypage/mypage.css
+++ b/src/main/webapp/css/mypage/mypage.css
@@ -156,7 +156,7 @@ a:visited{
 }
 
 /*          감상평           */
-.table-responsive {position:relative; z-index:1}
+.table-responsive {position:relative;}
 .sticky-top {
 	width:100%; height:50px;
 	text-align:center; line-height:50px;
